@@ -63,6 +63,7 @@ function drawLine( startX, startY, endX, endY, nColour )
     end
     
     local minX = math.min( startX, endX )
+    local maxX, minY, maxY
     if minX == startX then
         minY = startY
         maxX = endX
@@ -123,6 +124,7 @@ function drawBox( startX, startY, endX, endY, nColour )
     end
 
     local minX = math.min( startX, endX )
+    local maxX, minY, maxY 
     if minX == startX then
         minY = startY
         maxX = endX
@@ -167,6 +169,7 @@ function drawFilledBox( startX, startY, endX, endY, nColour )
     end
 
     local minX = math.min( startX, endX )
+    local maxX, minY, maxY
     if minX == startX then
         minY = startY
         maxX = endX
