@@ -16,9 +16,11 @@ GitHub Contributors:
 apemanzilla
 Bartek Bok
 Bomb Bloke
+CrazedProgrammer
 Cruor
 gegy1000
 Jonathan Leitschuh
+KingofGamesYami
 Lignum
 Logan Davis
 MineRobber___T
@@ -26,6 +28,8 @@ Nephi (AKA Lupus590)
 ObloxCC
 Restioson
 SquidDev
+Steven Dirth
 Tim Ittermann
 Wilma456
+Wilma456 (Jakob0815)
 Wojbie
