@@ -642,7 +642,7 @@ while bRunning do
                 if x > 1 then
                     -- Remove character
                     local sLine = tLines[y]
-                    if x > 4 and string.sub(sLine,x-4,x-1) == "    " then
+                    if x > 4 and string.sub(sLine,x-4,x-1) == "    " and not string.sub(sLine, 1, x - 1):find("%S") then
                         tLines[y] = string.sub(sLine,1,x-5) .. string.sub(sLine,x)
                         setCursor( x - 4, y )
                     else
