@@ -1,0 +1,5 @@
+print([[CCLite Version ]]..cclite.getVersion()..[[ made by Wilma456
+Based on CCLite from Sorroko and gamax92
+Licensed under the Apache License, Version 2.0
+Thanks to BombBloke for the Font]])
+
