@@ -32,5 +32,6 @@ New Features in ComputerCraft 1.80:
 * Fixed a handful of bugs in ComputerCraft
 * Added speaker block, turtle upgrade, pocket upgrade, and peripheral api
 * Startup can now be a directory containing multiple startup files
+* Added .getLabel to the computer peripheral
 
 Type "help changelog" to see the full version history.
